Fix wrapping on smaller screens

--- a/src/components/StatusStrip/_status-strip.scss
+++ b/src/components/StatusStrip/_status-strip.scss
@@ -2,6 +2,10 @@
   align-items: center;
   display: flex;
 
+  &__label {
+    margin-right: 0.5rem;
+  }
+
   &__statement {
     text-transform: capitalize;
   }
